[package]
name = "melies"
version = "0.0.0"
description = "A TF2 Recording Tool and more!"
authors = ["Maven"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
chrono = "0.4.24"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
vdm = "1.0.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
steamid-ng = "1.0.0"
tf-demo-parser = "0.4.0"
fnv = "1.0.7"
bitbuffer = { version = "0.10.9", features = ["serde"] }
num_enum = "0.5.7"
parse-display = "0.8.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
