[package]
name = "melies"
version = "1.4.0"
description = "A TF2 Recording Tool and more!"
authors = ["Maven (famous)"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
opener = { version = "0.7.2", features = ["reveal"] }
serde_json = "1.0"
chrono = "0.4.24"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
vdm = "1.0.9"
reqwest = { version = "0.11", features = ["blocking", "json"] }
steamid-ng = "1.0.0"
sysinfo = "0.32.1"
tf-demo-parser = { path = "../parser" }
melies_rust = { path = "../origin" }
human-sort = "0.2.2"
fnv = "1.0.7"
bitbuffer = { version = "0.11.0", features = ["serde"] }
num_enum = "0.5.7"
parse-display = "0.8.0"
tauri-plugin-store = { version = "2" }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
sanitize-filename = "0.6.0"
tauri-plugin-clipboard-manager = "2.2.0"
trash = "3"
fs_extra = "1.3.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
debug = 0
